<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/therd_app"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Chronometer
        android:id="@+id/countup_chrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="Chronometer" />

    <Button
        android:id="@+id/buzz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countup_chrono"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/buzz" />

    <Button
        android:id="@+id/fizz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buzz_button"
        android:layout_alignBottom="@+id/buzz_button"
        android:layout_toLeftOf="@+id/textView1"
        android:text="@string/fizz" />

    <Button
        android:id="@+id/fizz_buzz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buzz_button"
        android:layout_alignBottom="@+id/buzz_button"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/first_app" />

    <Button
        android:id="@+id/number_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/countup_chrono"
        android:layout_below="@+id/buzz_button"
        android:layout_marginTop="44dp" />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countup_chrono"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>